--- a/index.html
+++ b/index.html
@@ -457,26 +457,34 @@
                     <div class="row">
                         <!-- contact info item start -->
                          <div class="contact-info-item padd-15">
+                            <a href="mailto:krimeht09@gmail.com" target="_blank">
                             <div class="icon"><i class="fa fa-envelope"></i></div>
                             <h4>Email</h4>
+                         </a>
                          </div>
                          <!-- contact info item end -->
                           <!-- contact info item start -->
                          <div class="contact-info-item padd-15">
+                            <a href="https://www.facebook.com/krisha.mehta.50?mibextid=ZbWKwL " target="_blank">
                             <div class="icon"><i class="fab fa-facebook"></i></div>
                             <h4>Facebook</h4>
+                        </a>
                          </div>
                          <!-- contact info item end -->
                           <!-- contact info item start -->
                          <div class="contact-info-item padd-15">
+                            <a href="https://www.linkedin.com/in/krisha-mehta-699048207/" target="_blank">
                             <div class="icon"><i class="fab fa-linkedin"></i></div>
                             <h4>LinkedIn</h4>
+                        </a>
                          </div>
                          <!-- contact info item end -->
                           <!-- contact info item start -->
                          <div class="contact-info-item padd-15">
-                            <div class="icon"><i class="fab fa-github"></i></div>
+                            <a href="https://github.com/krisha2009" target="_blank">
+                            <div class="icon"><i class="fab fa-github" target="_blank"></i></div>
                             <h4>Github</h4>
+                        </a>
                          </div>
                          <!-- contact info item end -->
                     </div>
