--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
     <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
     <link rel="stylesheet" href="css/style-switcher.css">
+    <link rel="icon" type="image/png" sizes="64x64" href="images/km logo.png">
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <!-- <script src="js/script1.js"></script> -->
+    
 </head>
 <body>
     <div class="main-container">
@@ -29,7 +33,7 @@
     <ul class="nav">
         <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
         <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
-        <li><a href="#about"><i class="fas fa-file-alt"></i>Resume</a></li>
+        <li><a href="Krisha Mehta Resume.pdf"><i class="fas fa-file-alt"></i>Resume</a></li>
         <li><a href="#experience"><i class="fa fa-list"></i>Experience</a></li>
         <li><a href="#project"><i class="fa fa-briefcase"></i>Projects</a></li>
         <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
@@ -495,32 +499,32 @@
                             <div class="row">
                                 <div class="form-item col-6 padd-15">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Name">
+                                        <input type="text" class="form-control" placeholder="Name" id="fullName">
                                     </div>
                                 </div>
                                 <div class="form-item col-6 padd-15">
                                     <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Email">
+                                        <input type="email" class="form-control" placeholder="Email" id="email_id">
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
                                     <div class="form-group">
-                                        <input type="text" class="form-control"  placeholder="Subject"></textarea>
+                                        <input type="text" class="form-control"  placeholder="Subject" id="subject">
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
                                     <div class="form-group">
-                                        <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
+                                        <textarea name="" class="form-control" placeholder="Message" id="message"></textarea>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
-                                    <button type="submit" class="btn">Send Email</button>
+                                    <button onclick="SendMail()" class="btn">Send Email</button>
                                 </div>
                             </div>
                         </div>
@@ -553,5 +557,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js" integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+    (function(){
+       emailjs.init({
+         publicKey: "vJoEJMGTfm2M8xDto",
+       });
+    })();
+ </script>
 </body>
 </html>
