--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@
             <!-- Project item start -->
             <div class="project-item padd-15">
                 <div class="project-item-inner shadow-dark">
-                    <img src="images/travel.jpg" alt="Travel Website">
+                    <img src="images/food.jpg" alt="Travel Website">
                     <div class="project-info">
-                        <h3>Travel Booking Website</h3>
-                        <p>Created a responsive travel booking website using React.js and Node.js.</p>
+                        <h3>Food Recipe Web App</h3>
+                        <p>Created a responsive food recipe web application using React.js and Django.</p>
                     </div>
                 </div>
             </div>
